--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,25 @@ $blue-dark: #146166;
 $orange: #E5852D;
 
 $body-copy: rgba(#05181A, 0.65);
+
+$phone-width: 320px;
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+@mixin phone {
+  @media (min-width: #{$phone-width}) and (max-width: #{$tablet-width - 1px}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
